--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
     "npm": "5.0.3"
   },
   "scripts": {
-    "start": "node index.js",
-    "server": "nodemon index.js",
+    "start": "node index.js --exec babel-node",
+    "server": "nodemon index.js --exec babel-node",
     "client": "npm start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "bcryptjs": "^2.4.3",
     "compression": "^1.7.3",
     "concurrently": "^3.5.1",
